submitted above 80, I think I'm tapping out

--- a/Last_attempt.ipynb
+++ b/Last_attempt.ipynb
@@ -2439,6 +2439,271 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "t6N0MPuHuXhW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "b2ce5f37-8d99-4491-d7b1-a8f27fa78cb4"
+      },
+      "source": [
+        "features = ['quantity', 'waterpoint_type', \"extraction_type_class\", \n",
+        "            \"payment_type\", \"lga\", \"latitude\", \"longitude\", \"amount_tsh\", \n",
+        "            \"age_of_pump\", \"population\", \"public_meeting\"]\n",
+        "target = \"status_group\"\n",
+        "\n",
+        "X_train = train[features]\n",
+        "y_train = train_y[target]\n",
+        "X_test = test[features]\n",
+        "\n",
+        "imputer = SimpleImputer(strategy=\"constant\", fill_value=\"other\")\n",
+        "X_train = imputer.fit_transform(X_train)\n",
+        "X_test = imputer.transform(X_test)\n",
+        "\n",
+        "encoder = ce.OrdinalEncoder()\n",
+        "X_train = encoder.fit_transform(X_train)\n",
+        "X_test = encoder.transform(X_test)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.transform(X_test)\n",
+        "\n",
+        "scores = cross_validate(XGBClassifier(max_depth=8, n_estimators=280),\n",
+        "                       X_train,\n",
+        "                       y_train,\n",
+        "                       scoring=\"accuracy\",\n",
+        "                       cv=3,\n",
+        "                       return_train_score=True,\n",
+        "                       return_estimator=True)\n",
+        "\n",
+        "pd.DataFrame(scores)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>fit_time</th>\n",
+              "      <th>score_time</th>\n",
+              "      <th>estimator</th>\n",
+              "      <th>test_score</th>\n",
+              "      <th>train_score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>50.296255</td>\n",
+              "      <td>2.395504</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.796313</td>\n",
+              "      <td>0.877955</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>50.133349</td>\n",
+              "      <td>2.391222</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.795404</td>\n",
+              "      <td>0.878813</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>50.324916</td>\n",
+              "      <td>2.366510</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.793737</td>\n",
+              "      <td>0.876035</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    fit_time  score_time  ... test_score  train_score\n",
+              "0  50.296255    2.395504  ...   0.796313     0.877955\n",
+              "1  50.133349    2.391222  ...   0.795404     0.878813\n",
+              "2  50.324916    2.366510  ...   0.793737     0.876035\n",
+              "\n",
+              "[3 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfJt1drh5yXe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "boost = XGBClassifier(max_depth=8, n_estimators=280)\n",
+        "boost.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = boost.predict(X_test)\n",
+        "\n",
+        "sample_submission = pd.read_csv('https://raw.githubusercontent.com/livjab/DS3-Kaggle-Comptetion/master/sample_submission.csv')\n",
+        "submission = sample_submission.copy()\n",
+        "submission['status_group'] = y_pred\n",
+        "\n",
+        "from google.colab import files\n",
+        "submission.to_csv('LJ-eleventh-submission.csv', index=False)\n",
+        "files.download('LJ-eleventh-submission.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UmOMAfMBvhMM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "6622febb-aeb6-42dc-e50b-6dd98b3470a3"
+      },
+      "source": [
+        "# slightly better when I increased estimators\n",
+        "# lets play with a few more parameters\n",
+        "\n",
+        "features = ['quantity', 'waterpoint_type', \"extraction_type_class\", \n",
+        "            \"payment_type\", \"lga\", \"latitude\", \"longitude\", \"amount_tsh\", \n",
+        "            \"age_of_pump\", \"population\", \"public_meeting\"]\n",
+        "target = \"status_group\"\n",
+        "\n",
+        "X_train = train[features]\n",
+        "y_train = train_y[target]\n",
+        "X_test = test[features]\n",
+        "\n",
+        "imputer = SimpleImputer(strategy=\"constant\", fill_value=\"other\")\n",
+        "X_train = imputer.fit_transform(X_train)\n",
+        "X_test = imputer.transform(X_test)\n",
+        "\n",
+        "encoder = ce.OrdinalEncoder()\n",
+        "X_train = encoder.fit_transform(X_train)\n",
+        "X_test = encoder.transform(X_test)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.transform(X_test)\n",
+        "\n",
+        "scores = cross_validate(XGBClassifier(max_depth=8, n_estimators=280, booster=\"dart\"),\n",
+        "                       X_train,\n",
+        "                       y_train,\n",
+        "                       scoring=\"accuracy\",\n",
+        "                       cv=3,\n",
+        "                       return_train_score=True,\n",
+        "                       return_estimator=True)\n",
+        "\n",
+        "pd.DataFrame(scores)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>fit_time</th>\n",
+              "      <th>score_time</th>\n",
+              "      <th>estimator</th>\n",
+              "      <th>test_score</th>\n",
+              "      <th>train_score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>693.296307</td>\n",
+              "      <td>2.721242</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='dart', ...</td>\n",
+              "      <td>0.795202</td>\n",
+              "      <td>0.879040</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>670.573945</td>\n",
+              "      <td>2.634070</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='dart', ...</td>\n",
+              "      <td>0.795404</td>\n",
+              "      <td>0.878813</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>670.101717</td>\n",
+              "      <td>2.520607</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='dart', ...</td>\n",
+              "      <td>0.793737</td>\n",
+              "      <td>0.876035</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     fit_time  score_time  ... test_score  train_score\n",
+              "0  693.296307    2.721242  ...   0.795202     0.879040\n",
+              "1  670.573945    2.634070  ...   0.795404     0.878813\n",
+              "2  670.101717    2.520607  ...   0.793737     0.876035\n",
+              "\n",
+              "[3 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "QWnSR2OidHf0",
         "colab_type": "code",
         "colab": {
@@ -2448,7 +2713,7 @@
         "outputId": "0fbf250c-5142-45d1-a364-6065a91750fc"
       },
       "source": [
-        "# moving up more, lets keep adding\n",
+        "# moving up more, lets keep adding features\n",
         "\n",
         "features = ['quantity', 'waterpoint_type', \"extraction_type_class\", \n",
         "            \"payment_type\", \"lga\", \"latitude\", \"longitude\", \"amount_tsh\", \n",
@@ -3171,6 +3436,170 @@
       "cell_type": "code",
       "metadata": {
         "id": "X3WyPWc_pESu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 567
+        },
+        "outputId": "63ceeec3-718e-4607-d742-f3b18f901029"
+      },
+      "source": [
+        "# gonna try from the beginning using random forest\n",
+        "\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "encoder = ce.OrdinalEncoder()\n",
+        "X_train = encoder.fit_transform(X_train)\n",
+        "\n",
+        "param_distributions = {\n",
+        "    'n_estimators': randint(100, 300), \n",
+        "    'max_depth': [6, 7, 8]\n",
+        "}\n",
+        "\n",
+        "search = RandomizedSearchCV(\n",
+        "    estimator=RandomForestClassifier(n_jobs=-1), \n",
+        "    param_distributions=param_distributions, \n",
+        "    n_iter=8, \n",
+        "    scoring='accuracy', \n",
+        "    n_jobs=-1, \n",
+        "    cv=3, \n",
+        "    verbose=10, \n",
+        "    return_train_score=True, \n",
+        "    random_state=42\n",
+        ")\n",
+        "\n",
+        "search.fit(X_train.values, y_train.values)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
+            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:   23.0s\n",
+            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:   38.4s\n",
+            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:  1.1min\n",
+            "[Parallel(n_jobs=-1)]: Done  14 tasks      | elapsed:  1.6min\n",
+            "[Parallel(n_jobs=-1)]: Done  21 tasks      | elapsed:  2.5min\n",
+            "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:  2.7min remaining:    0.0s\n",
+            "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:  2.7min finished\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomizedSearchCV(cv=3, error_score='raise-deprecating',\n",
+              "                   estimator=RandomForestClassifier(bootstrap=True,\n",
+              "                                                    class_weight=None,\n",
+              "                                                    criterion='gini',\n",
+              "                                                    max_depth=None,\n",
+              "                                                    max_features='auto',\n",
+              "                                                    max_leaf_nodes=None,\n",
+              "                                                    min_impurity_decrease=0.0,\n",
+              "                                                    min_impurity_split=None,\n",
+              "                                                    min_samples_leaf=1,\n",
+              "                                                    min_samples_split=2,\n",
+              "                                                    min_weight_fraction_leaf=0.0,\n",
+              "                                                    n_estimators='warn',\n",
+              "                                                    n_jobs=-1, oob_score=False,\n",
+              "                                                    random_state=None,\n",
+              "                                                    verbose=0,\n",
+              "                                                    warm_start=False),\n",
+              "                   iid='warn', n_iter=8, n_jobs=-1,\n",
+              "                   param_distributions={'max_depth': [6, 7, 8],\n",
+              "                                        'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f181f6b29e8>},\n",
+              "                   pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
+              "                   return_train_score=True, scoring='accuracy', verbose=10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b_iXC6yUsvuu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "aa00d15d-6d31-49c9-9f05-a6c87e85ef92"
+      },
+      "source": [
+        "search.best_score_"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7378114478114478"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ivDcRl6StDsu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "14bc7154-2c6a-4764-8cd6-6b223cba9529"
+      },
+      "source": [
+        "best = search.best_estimator_\n",
+        "\n",
+        "best"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+              "                       max_depth=8, max_features='auto', max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=221,\n",
+              "                       n_jobs=-1, oob_score=False, random_state=None, verbose=0,\n",
+              "                       warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "phrMNdaSt2qJ",
         "colab_type": "code",
         "colab": {}
       },
